--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,89 +1,34 @@
 @use "../utils" as *;
 
+$header-font: clamp(px-to-rem(32), px-to-rem(16) + 2vw, px-to-rem(48));
 header {
-  position: fixed;
-  z-index: 100;
-  width: 100%;
-  padding: $spacing-sm;
-}
-.menu-btn {
-  position: absolute;
-  z-index: 100;
-  @include top-right(1rem, 1rem);
-  height: 20px;
-  width: 30px;
-  cursor: pointer;
-  transition: $transition;
+  background-color: $secondary-color;
+  box-shadow: $light-shadow;
+  padding-block: px-to-rem(20);
 
-  &__burger {
-    @include top-right(0, 0);
-    @include hamburger;
-
-    &::before {
-      content: "";
-      @include hamburger;
-      @include top-right(-0.5rem, 0rem);
-      width: 20px;
-    }
-    &::after {
-      content: "";
-      @include hamburger;
-      @include top-right(0.5rem, 0rem);
-      width: 20px;
+  .nav {
+    @include flex(row, space-between);
+    padding-inline: px-to-rem(10);
+    @include breakpoint-up(medium) {
+      padding-inline: px-to-rem(16);
     }
 
-    //this means that its the same element (extra class) - NOT A CHILD ELEMENT
-    &.open {
-      transform: rotate(720deg);
-      background: transparent;
-      &::before {
-        transform: rotate(45deg) translate(5px, 8px);
+    &__logo {
+      color: $primary-color;
+      @include flex(row, flex-start);
+      gap: px-to-rem(5);
+      svg {
+        height: $header-font;
       }
-      &::after {
-        transform: rotate(-45deg) translate(3px, -7px);
+      &--title {
+        padding-top: px-to-rem(10);
       }
     }
-  }
-}
 
-.nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  opacity: 0.98;
-  visibility: hidden;
-
-  &.open {
-    visibility: visible;
-  }
-  .menu-nav {
-    @include flex(column);
-    justify-content: center;
-    height: 100vh;
-    background: $primary-color;
-    transform: translateY(-100%);
-    transition: $transition;
-    &.open {
-      transform: translate(0);
-    }
-    &__item {
-      transform: translateX(100vw);
-      transition: $transition;
-      &.open {
-        transform: translateX(0);
-      }
-      &.active > a {
-        color: $secondary-color;
-      }
-    }
-    &__link {
-      display: inline-block;
-      font-size: clamp(px-to-rem(32), px-to-rem(16) + 2vw, px-to-rem(48));
-      transition: $transition;
-      font-weight: $font-medium;
-      text-transform: uppercase;
-      padding-block: $spacing-md;
+    &__button {
+      @extend .button;
+      font-size: $header-font;
+      color: $primary-color;
     }
   }
 }
