--- a/src/scss/utils/_base.scss
+++ b/src/scss/utils/_base.scss
@@ -12,11 +12,12 @@ html {
 }
 
 body {
-  background-color: $primary-color;
-  color: set-text-color($primary-color);
+  background-color: $home-color;
+  color: #000;
   height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1;
+  width: 100%;
 }
 
 h1,
@@ -52,21 +53,25 @@ h2 {
 h3 {
   font-size: clamp(
     px-to-rem(28),
-    px-to-rem(14) + 1.8vw,
-    px-to-rem(32)
+    px-to-rem(14) + 1.6vw,
+    px-to-rem(30)
   ); //7.47vw; //28px
 }
 h4 {
   font-size: clamp(
     px-to-rem(16),
-    px-to-rem(10) + 1.5vw,
-    px-to-rem(28)
+    px-to-rem(10) + 1.2vw,
+    px-to-rem(24)
   ); //4.27vw; //16px
 }
 
 a {
-  color: set-text-color($primary-color);
+  color: set-text-color(black);
   text-decoration: none;
+  transition: $transition;
+  &:hover {
+    color: $secondary-color;
+  }
 }
 
 p {
@@ -79,23 +84,23 @@ ul {
 main {
   height: 100%;
   width: 100%;
+}
 
-  .social-icons {
-    position: fixed;
-    bottom: 1rem;
-    left: 1rem;
+.section {
+  margin-inline: auto;
+  padding-top: px-to-rem(32);
+  width: min(100%, $max-width);
+  color: black;
+  padding-inline: px-to-rem(16);
 
-    a {
-      padding: $spacing-xs;
-      transition: $transition;
-      &:hover {
-        color: $secondary-color;
-      }
-    }
+  @include breakpoint-up(medium) {
+    padding-inline: 2rem;
   }
 }
 
-// section {
-//   margin-inline: auto;
-//   width: min(100%, 1000px);
-// }
+.button {
+  text-transform: capitalize;
+  background: transparent;
+  border: transparent;
+  border-radius: px-to-rem(5);
+}
