--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,28 +1,50 @@
 @use "./variables" as *;
 @use "./functions" as *;
+@use "sass:map";
 
 //param:default value
-@mixin flex($direction) {
+@mixin flex($direction, $justify) {
   display: flex;
   flex-direction: $direction;
   align-items: center;
+  justify-content: $justify;
   flex-wrap: wrap;
   overflow: hidden;
 }
 
-@mixin top-right($top, $right) {
-  top: $top;
-  right: $right;
+@mixin grid($cols, $gap) {
+  display: grid;
+  grid-template-columns: repeat($cols, 1fr);
+  grid-template-rows: auto;
+  gap: px-to-rem($gap);
+  overflow: hidden;
 }
 
+@mixin top-right($top, $right) {
+  position: absolute;
+  top: px-to-rem($top);
+  right: px-to-rem($right);
+}
+
+$breakpoints-up: (
+  "medium": px-to-em(700),
+  "large": px-to-em(900),
+  "xlarge": px-to-em(1440),
+) !default;
+$breakpoints-down: (
+  "small": px-to-em(699.98),
+  "medium": px-to-em(899.98),
+  "large": px-to-em(1439.98),
+) !default;
 
 @mixin breakpoint-up($size) {
-  @media (min-width: map-get($breakpoints-up, $size)) {
+  @media only screen and (min-width: map-get($breakpoints-up, $size)) {
     @content;
   }
 }
+
 @mixin breakpoint-down($size) {
-  @media (max-width: map-get($breakpoints-down, $size)) {
+  @media only screen and (max-width: map-get($breakpoints-down, $size)) {
     @content;
   }
 }
