--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -33,12 +33,13 @@ header {
       }
       &--items {
         position: absolute;
-        @include top-right(-12, 7);
+        @include top-right(-10, 0);
         border-radius: $radius-lg;
         color: $secondary-color;
         background: $tertiary-color;
         font-weight: $font-medium;
         padding: px-to-rem(5) px-to-rem(8);
+        border: 3px solid $secondary-color;
       }
     }
   }
