--- a/src/scss/utils/_base.scss
+++ b/src/scss/utils/_base.scss
@@ -1,4 +1,5 @@
 @use "./variables" as *;
+@use "./colors" as *;
 @use "./mixins" as *;
 @use "./functions" as *;
 * {
@@ -103,4 +104,14 @@ main {
   background: transparent;
   border: transparent;
   border-radius: px-to-rem(5);
+  cursor: pointer;
+  padding: px-to-rem(10);
+  background: lighten($primary-color, 10%);
+  color: $secondary-color;
+
+  &:hover {
+    background: darken($secondary-color, 10%);
+    transition: $transition;
+    color: $primary-color;
+  }
 }
