--- a/src/scss/utils/_index.scss
+++ b/src/scss/utils/_index.scss
@@ -1,6 +1,6 @@
 //import utils folder to use styles
 @forward "./variables";
 @forward "./functions";
-
+@forward "./colors";
 @forward "./mixins";
 @forward "./base";
