--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -1,6 +1,6 @@
 //colors
 $secondary-color: white !default;
-$primary-color: purple !default;
+$primary-color: lighten(purple, 10%) !default;
 $tertiary-color: black;
 $gray: grey;
 $home-color: hsl(0, 0%, 90%);
