--- a/src/scss/layout/_cart.scss
+++ b/src/scss/layout/_cart.scss
@@ -9,15 +9,20 @@
     display: flex;
     background: $secondary-color;
     flex-direction: column;
-    gap: px-to-rem(10);
-    padding: px-to-rem(10);
-    margin-bottom: px-to-rem(15);
+    gap: $spacing-sm;
+    padding: $spacing-sm;
+    margin-bottom: $spacing-md;
     border-radius: $radius-md;
   }
   .cart-item {
+    width: px-to-rem(300);
     display: flex;
     align-items: center;
     gap: px-to-rem(10);
+
+    @include breakpoint-up(medium) {
+      width: px-to-rem(600);
+    }
 
     &__image {
       height: 200px;
@@ -31,10 +36,10 @@
       &--title {
         display: flex;
         flex-wrap: wrap;
-        font-weight: $font-medium;
+        font-weight: $font-normal;
       }
       &--price {
-        font-weight: $font-thick;
+        font-weight: $font-heavy;
         color: $primary-color;
       }
     }
