--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -1,48 +1,84 @@
 @use "../utils/" as *;
 
 .products-list {
-  @include grid(2, 10);
-
-  @include breakpoint-up(large) {
-    grid-template-columns: repeat(4, 1fr);
-  }
+  @include grid(1, 15);
 
   .product {
+    @include flex(column, center);
+    gap: $spacing-lg;
     position: relative;
-    @include flex(column, null);
-    width: min(px-to-rem(250), px-to-rem(400));
+    width: px-to-rem(250);
     text-align: center;
     color: $tertiary-color;
     background-color: $secondary-color;
     box-shadow: $light-shadow;
-    padding: px-to-rem(20);
+    padding: $spacing-lg;
     border-radius: $radius-md;
+    transition: $transition;
 
-    &:hover {
-      box-shadow: $light-shadow;
+    @include breakpoint-up(large) {
+      width: px-to-rem(300);
     }
+
     &__image {
       object-fit: contain;
       width: 100%;
       height: px-to-rem(100);
     }
     &__content {
-      padding-block: px-to-rem(20);
-
+      // padding-top: $spacing-md;
       &--title {
         font-weight: $font-heavy;
       }
       &--price {
         @include top-right(10, 10);
+        font-weight: $font-heavy;
+        color: $primary-color;
       }
       &--category {
         text-transform: capitalize;
+        // padding-block: $spacing-md;
+        padding-bottom: $spacing-2xl;
       }
     }
     &__footer {
-      @include flex(row, space-between);
-      gap: px-to-rem(4);
-      &--button {
+      @include bottom-center(15);
+      @include flex(row, space-around);
+      width: calc(100% - 2.5rem);
+      gap: $spacing-sm;
+
+      &--details,
+      &--add {
+        transform: translateY(100px);
+        transition: $transition;
+      }
+    }
+
+    /*
+    ================
+    HOVER EFFECTS
+   =================
+    */
+
+    //2xl = 3rem
+    &:hover {
+      box-shadow: $dark-shadow;
+      transform: translateY(-10px);
+
+      .product {
+        &__content {
+          // padding-top: $spacing-lg;
+        }
+        &__footer {
+          &--details {
+            transform: translateY(0);
+            transition-delay: 0.1s;
+          }
+          &--add {
+            transform: translateY(0);
+            transition-delay: 0.2s;
+          }
+        }
       }
     }
   }
