--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,15 @@
+:root {
+  --primary-color: #b300b3;
+  --secondary-color: white;
+  --tertiary-color: #b300b3;
+}
+
+.dark {
+  --primary-color: #b300b3;
+  --secondary-color: black;
+  --tertiary-color: white;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -9,7 +21,7 @@ html {
 }
 
 body {
-  background-color: fff;
+  background-color: hsl(0deg, 0%, 90%);
   color: #000;
   height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -46,11 +58,11 @@ h2 {
 }
 
 h3 {
-  font-size: clamp(1.75rem, 0.875rem + 1.8vw, 2rem);
+  font-size: clamp(1.75rem, 0.875rem + 1.6vw, 1.875rem);
 }
 
 h4 {
-  font-size: clamp(1rem, 0.625rem + 1.5vw, 1.75rem);
+  font-size: clamp(1rem, 0.625rem + 1.2vw, 1.5rem);
 }
 
 a {
@@ -76,38 +88,81 @@ main {
   width: 100%;
 }
 
-.section {
+section {
   margin-inline: auto;
-  width: min(100%, 1170px);
+  padding-top: 2rem;
   color: black;
   padding-inline: 1rem;
 }
 @media only screen and (min-width: 43.75em) {
-  .section {
-    padding-inline: 4rem;
+  section {
+    padding-inline: 2rem;
   }
 }
 
-.button {
-  padding-inline: 0.625rem;
-  padding-block: 0.625rem;
-  text-transform: uppercase;
-  border: transparent;
+button {
+  position: relative;
+  padding: 0.625rem;
+  background: transparent;
+  color: #b300b3;
+  text-transform: capitalize;
+  border: 3px solid #b300b3;
   border-radius: 0.3125rem;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  z-index: 1;
+}
+
+.styled-button::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  bottom: -3px;
+  right: -3px;
+  border-radius: 0.3125rem;
+  transition: all 0.5s ease-in-out;
+  background-color: #b300b3;
+  transform: scaleX(0);
+  transform-origin: left;
+  z-index: -1;
+}
+.styled-button:hover {
+  color: white;
+}
+.styled-button:hover::before {
+  transform: scaleX(1);
+}
+
+.active-btn {
+  color: white;
+  background-color: #b300b3;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: center;
+  min-height: 100vh;
+  gap: 1rem;
 }
 
 header {
-  position: relative;
+  background-color: var(--secondary-color);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  padding-block: 1.25rem;
+  padding-block: 1rem;
+  transition: all 0.5s ease-in-out;
 }
 header .nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
   flex-wrap: wrap;
   overflow: hidden;
+  justify-content: space-between;
   padding-inline: 0.625rem;
 }
 @media only screen and (min-width: 43.75em) {
@@ -116,13 +171,13 @@ header .nav {
   }
 }
 header .nav__logo {
-  color: purple;
+  color: var(--primary-color);
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
   flex-wrap: wrap;
   overflow: hidden;
+  justify-content: flex-start;
   gap: 0.3125rem;
 }
 header .nav__logo svg {
@@ -131,35 +186,369 @@ header .nav__logo svg {
 header .nav__logo--title {
   padding-top: 0.625rem;
 }
-header .nav__button {
+header .nav__pagination {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  gap: 1rem;
+}
+header .nav__cart {
+  position: relative;
+  z-index: 1;
+}
+header .nav__cart--icon {
+  border: none;
+  position: relative;
   font-size: clamp(2rem, 1rem + 2vw, 3rem);
-  color: purple;
+  color: var(--primary-color);
+  transition: all 0.5s ease-in-out;
+}
+header .nav__cart--count {
+  position: absolute;
+  top: -0.25rem;
+  right: -0.1875rem;
+  border-radius: 50%;
+  color: var(--secondary-color);
+  background: var(--tertiary-color);
+  font-weight: 400;
+  font-size: 1rem;
+  padding: 0.25rem 0.4375rem;
+  border: 3px solid var(--secondary-color);
+  z-index: 10;
+  transition: all 0.5s ease-in-out;
+  transform: scale(0.9);
+}
+@media only screen and (min-width: 43.75em) {
+  header .nav__cart--count {
+    position: absolute;
+    top: -0.3125rem;
+    right: -0.25rem;
+  }
+}
+header .nav__cart:hover .nav__cart--icon {
+  transform: scale(1.1) rotate(-10deg);
+}
+header .nav__cart:hover .nav__cart--count {
+  transform: scale(1);
+}
+
+.category__container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: center;
+  width: 100%;
+  padding-top: 3rem;
+  gap: 1rem;
 }
 
 .products-list {
-  padding-block: 2rem;
+  position: relative;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   grid-template-rows: auto;
-  gap: 0.625rem;
+  gap: 0.9375rem;
+  overflow: hidden;
+  justify-items: center;
+}
+@media only screen and (min-width: 43.75em) {
+  .products-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media only screen and (min-width: 56.25em) {
   .products-list {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
-.products-list .product {
+@media only screen and (min-width: 90em) {
+  .products-list {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.5625rem;
+  }
+}
+
+.details {
+  position: relative;
   display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: auto;
+  gap: 1.25rem;
+  overflow: hidden;
+  justify-items: center;
+}
+@media only screen and (min-width: 43.75em) {
+  .details {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto;
+    gap: 0.625rem;
+    overflow: hidden;
+    justify-items: center;
+  }
+}
+.details__image, .details__content {
+  background-color: white;
+  border-radius: 0.625rem;
+  padding: 2rem;
+}
+.details__image {
+  justify-self: center;
+  max-height: 300px;
+}
+@media only screen and (min-width: 43.75em) {
+  .details__image {
+    justify-self: right;
+    max-height: 450px;
+  }
+}
+.details__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: center;
+  gap: 1rem;
+  text-align: center;
+}
+.details__content--title {
+  font-weight: 700;
+}
+.details__content--description {
+  padding-block: 1.25rem;
+  line-height: 1.5;
+}
+.details__content--category {
+  color: grey;
+}
+.details__content--price {
   color: white;
+  background-color: #b300b3;
+}
+.details__content--button {
+  color: black;
+}
+
+.cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  gap: 2rem;
+  padding-bottom: 3rem;
+}
+.cart__content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: center;
+  gap: 2rem;
+}
+.cart__summary {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: auto;
+  gap: 0.25rem;
+  overflow: hidden;
+  justify-items: center;
+  width: 300px;
+  border-radius: 0.625rem;
+  background-color: white;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  padding: 1.25rem;
+}
+.cart__summary--content {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  gap: 1rem;
+  overflow: hidden;
+  justify-items: center;
+  padding-block: 0.625rem;
+}
+.cart__summary--price {
+  font-weight: 700;
+}
+
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2em;
+  height: 2em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+
+.loader {
+  color: #b300b3;
+  font-size: 20px;
+  position: relative;
+  text-indent: -9999em;
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  top: 0;
+}
+
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.loader:after {
+  left: 3.5em;
+}
+
+@-webkit-keyframes load7 {
+  0%, 80%, 100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%, 80%, 100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+.error-svg {
+  fill: red;
+  font-size: 5rem;
+}
+
+.error {
+  height: calc(100vh - 4rem);
+  background: url("../../images/error.jpg");
+  background-repeat: no-repeat;
+  background-position: center 0px;
+  background-size: cover;
+}
+.error__attribution {
+  position: absolute;
+  bottom: 10px;
+  left: 50;
+  color: grey;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: center;
+  gap: 1.25rem;
+  position: relative;
+  width: 15.625rem;
+  text-align: center;
+  color: black;
+  background-color: white;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   padding: 1.25rem;
-  border-radius: px-to-rem(10);
+  border-radius: 0.625rem;
+  transition: all 0.5s ease-in-out;
+  /*for cart*/
+  /*for cart*/
+  /*
+    ================
+    HOVER EFFECTS
+   =================
+    */
 }
-.products-list .product:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+@media only screen and (min-width: 56.25em) {
+  .product {
+    width: 18.75rem;
+  }
 }
-.products-list .product__image {
-  -o-object-fit: cover;
-     object-fit: cover;
+.product__image {
+  -o-object-fit: contain;
+     object-fit: contain;
   width: 100%;
+  height: 6.25rem;
+}
+.product__content--title {
+  font-weight: 700;
+}
+.product__content--price {
+  position: absolute;
+  top: 0.625rem;
+  right: 0.625rem;
+  font-weight: 700;
+  color: #b300b3;
+}
+.product__content--category {
+  text-transform: capitalize;
+  padding-bottom: 3rem;
+}
+.product__list-footer {
+  position: absolute;
+  bottom: 0.9375rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: space-around;
+  width: calc(100% - 2.5rem);
+  gap: 0.625rem;
+}
+.product__list-footer--details, .product__list-footer--add {
+  transform: translateY(100px);
+  transition: all 0.5s ease-in-out;
+}
+.product__cart-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  gap: 2rem;
+}
+.product__cart-footer--quantity {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
+  justify-content: space-between;
+  gap: 0.625rem;
+  font-weight: 700;
+}
+.product:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  transform: translateY(-10px);
+}
+.product:hover .product__list-footer--details {
+  transform: translateY(0);
+  transition-delay: 0.1s;
+}
+.product:hover .product__list-footer--add {
+  transform: translateY(0);
+  transition-delay: 0.2s;
 }/*# sourceMappingURL=style.css.map */
