--- a/src/scss/layout/_loading.scss
+++ b/src/scss/layout/_loading.scss
@@ -11,7 +11,7 @@
   animation: load7 1.8s infinite ease-in-out;
 }
 .loader {
-  color: $primary-color;
+  color: var(--primary-color);
   font-size: 20px;
   position: relative;
   text-indent: -9999em;
