--- a/src/scss/layout/_error.scss
+++ b/src/scss/layout/_error.scss
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
   background-position: center 0px;
   background-size: cover;
+  position: relative;
 
   &__attribution {
     position: absolute;
